# Conway-s-Game-of-Life

./: my_initial_file.txt  my_output_file.txt  pyproject.toml
jeu/: cmd_line.py  game.py  main.py  pattern.py
tests/: test_file.py
